# ASTRA

./: .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  paper_pdf.yml  testing.yml
advanced/spectra_interpolation/: index.html
advanced/spectra_normalization/: index.html
api/: index.html
api/Frame/: index.html
api/user_configs/: index.html
docs/: changelog.md  index.md
docs/advanced/: spectra_interpolation.ipynb  spectra_normalization.ipynb
docs/api/: Frame.md  index.md  user_configs.md
docs/diagrams/: stellar_template_construction.drawio  telluric_template_construction.drawio
docs/spectra/: access_spectra.ipynb  index.md  open_spectra.ipynb  selecting_spectra.ipynb
docs/template_creation/: index.md  stellar.ipynb  telluric.ipynb
docs/user_guide/: basic_example.ipynb  configuration.ipynb  index.md  installation.md
paper/: paper.bib  paper.md
search/: search_index.json
spectra/: index.html
spectra/access_spectra/: index.html
spectra/open_spectra/: index.html
spectra/selecting_spectra/: index.html
src/ASTRA/: __init__.py
src/ASTRA/Components/: Modelling.py  Spectral_Normalization.py  SpectrumComponent.py  __init__.py
src/ASTRA/Instruments/: CARMENES.py  ESO_PIPELINE.py  ESPRESSO.py  HARPS.py  MAROONX.py  (+3 more)
template_creation/: index.html
template_creation/stellar/: index.html
template_creation/telluric/: index.html
tests/: test_UserConfigs.py
user_guide/basic_example/: index.html
user_guide/configuration/: index.html
(+35 files in other folders)
